# chromerunner

./: Cargo.toml  DESIGN.md  PLAN.md  README.md
src/: error.rs  launcher.rs  lib.rs  main.rs  types.rs
src/chrome/: cdp.rs  mod.rs
src/firefox/: bidi.rs  mod.rs
src/safari/: mod.rs
src/transport/: http.rs  mod.rs  ws.rs
tests/: chrome.rs  firefox.rs  safari.rs
